--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -7,6 +7,8 @@
 }
 
 
+
+
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&subset=cyrillic');
 
 
@@ -232,4 +234,33 @@ body {
 .work-list__description {
     margin-left: auto;
     text-align: center;
+}
+
+// -----------------SOCIAL-------------------------
+
+.about-social {
+    display: flex;
+    justify-content: center;
+    margin: 2rem 15rem;
+}
+.social-title {
+    text-align: center;
+    margin-top: 5rem;
+    font-size: 2rem;
+    font-weight: 400;
+}
+
+.social-link {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    margin: 0 2rem;
+}
+.fa {
+    font-size: 5rem;
+    color: @text-color;
+
+    &:hover {
+        color: @active-color;
+    }
 }
