--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -61,9 +61,22 @@ body {
     position: relative;
     transition: all .2s cubic-bezier(0.54, -0.13, 0.52, 0.64);
 
-    &:hover {
-        border-bottom: 3px solid @text-color;
+    &:after {
+        position: absolute;
+        content: '.';
+        color: inherit;
+        right: -25px;
+        top: -7px;
+        display: none;
+        transition: all .2 ease-in-out;
+    }
+
+    &:hover::after {
+        display: block;
     }        
+    &:hover {
+        color: @shadow-color;
+    }
     &:active { 
         color: @active-color;
     }
@@ -222,6 +235,10 @@ body {
        transition: transform 0.4s, opacity 0.1s;
        opacity: 1;
 }
+.works-list__item:hover .work-list__text-wrap {
+    transform: translateY(0px);
+    transition: transform 0.6s, opacity 0.1s;
+}
 .works-list__item:hover .works-screen {
     opacity: 0.4;
     transform: translateY(-50px);
@@ -274,9 +291,9 @@ body {
 }
 .about-wrapper {
     padding: 1rem; 
-    background-color: @main-color;
+    background-color:darken(@main-color, 5%);
     border-radius: 7px;
-    box-shadow: 0 1px 1px @shadow-color;
+    box-shadow: 2px 1px 0 0 #b0b881;
 }
 .about-text {
     color: @text-color;
