--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -148,6 +148,42 @@ body {
 
 
 // ------------------WORKS SECTION---------------------
+
+input[type=radio] {
+	opacity: 0;
+}
+.switch-lang { 
+    display: inline-block;
+    margin: 3rem 0 1rem 0;
+    cursor: pointer;
+
+    &:hover {
+        color: @active-color;
+    }
+
+}
+
+#english:checked ~ .about-wrapper .english{
+   display: block;
+}
+
+#english ~ .about-wrapper .english{
+   display: none;
+}
+#english:checked ~ .about-wrapper .russian {
+    display: none;
+}
+#russian:checked ~ .about-wrapper .russian{
+   display: block;
+}
+
+#russian ~ .about-wrapper .russian{
+   display: none;
+}
+#russian:checked ~ .about-wrapper .english {
+    display: none;
+}
+
 .main {
     padding: 2%;
 }
