--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -302,6 +302,22 @@ input[type=radio] {
     margin-left: auto;
     text-align: center;
 }
+@keyframes fillup {
+  to { stroke-dasharray: 158 158; }
+}
+.top-right {
+  transform: rotate(270deg);
+  background: #b0b881;
+  border-radius: 50%;
+  margin: 18% 40%;
+}
+.top-right-circle {
+  fill: #b0b881;
+  stroke: #305a63;
+  stroke-width: 115;
+  animation: fillup 5s linear infinite;
+  stroke-dasharray: 118 48;
+}
 
 // -----------------SOCIAL-------------------------
 
