--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -47,9 +47,11 @@ body {
         });
 
     .screen(768px, 2220px, {
-            display: block;
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
+            width: 40%;
+            padding-left: 2%;
+            margin: auto;
         });
 }
 .menu__link {
@@ -153,18 +155,16 @@ input[type=radio] {
 	opacity: 0;
 }
 .switch-lang { 
-    display: inline-block;
+    border-bottom: 2px;
     margin: 1rem 0;
     cursor: pointer;
     font-size: 1.2rem;
     font-weight: 200;
-    padding: 1rem; 
-    background-color:darken(@main-color, 5%);
-    border-radius: 7px;
-    box-shadow: 2px 1px 0 0 #b0b881;
+    
 
     &:hover {
         color: @active-color;
+        border-bottom: 2px solid #9da15e;
     }
     &:checked {
         color: @active-color;
@@ -192,6 +192,28 @@ input[type=radio] {
 }
 #russian:checked  ~ .about-wrapper .english {
     display: none;
+}
+
+.russian,
+.english {
+    position: relative;
+        &:before,
+        &:after {
+            content: "";
+            position: absolute;
+            width: 30%;
+            height: 1px;
+            left: 32%;
+            background-color: @text-color;
+
+        }
+        &::before {
+            top: -32px;
+
+    }
+    &::after{
+        bottom: -32px;
+    }
 }
 
 .main {
@@ -374,16 +396,18 @@ input[type=radio] {
 }
 
 .about-wrapper {
-    padding: 1rem; 
-    background-color:darken(@main-color, 5%);
-    border-radius: 7px;
-    box-shadow: 2px 1px 0 0 #b0b881;
+    margin-top: 3rem;
+    position: relative;
 }
 .about-text {
     color: @text-color;
     font-size: 1.2rem;
     line-height: 1.8;
+    font-weight: 300;
+}
 
+.about-header {
+    font-weight: 500;
 }
 .about-link {
     width: 1rem;
