--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -16,6 +16,10 @@
 @text-color: 	#d6e5ab;
 @active-color: #9da15e;
 @shadow-color: 	#b0b881;
+// @main-color:#0D3446;
+// @text-color:#71ADB5;
+// @active-color: #71ADB5;
+// @shadow-color:#D8DFE2;
 
 * {
     box-sizing: border-box;
