--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -129,15 +129,11 @@ body {
     width: 70px;
     height: 70px;
     display: block;
-    background: url('../img/burger.svg') no-repeat center;
+    background: url('../img/menu-button.svg') no-repeat center;
     background-size: cover;
     cursor: pointer;
     position: relative;
     margin: 0 auto;
-    background-color: transparent;
-    border-radius: 50%;
-    box-shadow: 0 0 10px 4px @shadow-color;
-
 }
 .animation-on {
    animation: burger-rotate .4s; 
