fixed some bugs

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -163,6 +163,10 @@ input[type=radio] {
 
     &:first-child {
          margin-left: 10%;
+
+         .screen(320px, 768px,{
+            margin-left: 0;
+        });
     }
     
     &:hover {
