--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -387,12 +387,21 @@ input[type=radio] {
          padding: 0 5rem;
     });
 }
-
+.about-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.about-hello {
+    font-size: 2rem;
+    line-height: 2rem;
+    font-weight: 300;
+    text-shadow: 1px 1px rgba(255, 0, 247, 0.84);
+}
 .about-photo {
-    margin: 5%  10%;
     width: 200px;
-    height: 100%;
     border-radius: 50%;
+    font-weight: 300;
 }
 .about-text {
     color: @text-color;
