--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -1,4 +1,3 @@
-
 // mixin for media query
 .screen(@min, @max, @ruleset) {
   @media (min-width: @min) and (max-width: (@max - 1)) {
@@ -6,55 +5,46 @@
   }
 }
 
-
-
-
-
-
-
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&subset=cyrillic');
 
-
 @main-color: #305a63;
-@text-color: 	#d6e5ab;
+@text-color: #d6e5ab;
 @active-color: #9da15e;
-@shadow-color: 	#b0b881;
+@shadow-color: #b0b881;
 // @main-color:#0D3446;
 // @text-color:#71ADB5;
 // @active-color: #71ADB5;
 // @shadow-color:#D8DFE2;
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
-    background-color: @main-color;
-    color: @text-color;
-    font-size: 16px;
-    line-height: 1.5;
-    font-family:  'Source Sans Pro', sans-serif;
-   
-
+  background-color: @main-color;
+  color: @text-color;
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 .site-wrapper {
-    margin: 0 auto;
-    padding: 1% 3%;
-    max-width: 70em;
+  margin: 0 auto;
+  padding: 1% 3%;
+  max-width: 70em;
 
-    .screen(1024px, 2220px, {
+  .screen(1024px, 2220px, {
         padding: 1%;
     });
 }
 
 //  -------------------MENU-------------------------
 .menu__list {
-    list-style: none;
-            display: none;
+  list-style: none;
+  display: none;
 
-    .screen(320px, 768px, {
+  .screen(320px, 768px, {
         });
 
-    .screen(768px, 2220px, {
+  .screen(768px, 2220px, {
             display: flex;
             justify-content: space-between;
             width: 40%;
@@ -63,224 +53,215 @@ body {
         });
 }
 .menu__link {
-    text-decoration: none;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.5;
-    color: @text-color;
-    position: relative;
-    transition: all .2s cubic-bezier(0.54, -0.13, 0.52, 0.64);
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: @text-color;
+  position: relative;
+  transition: all 0.2s cubic-bezier(0.54, -0.13, 0.52, 0.64);
 
-    &:after {
-        position: absolute;
-        content: '.';
-        color: inherit;
-        right: -25px;
-        top: -7px;
-        display: none;
-        transition: all .2 ease-in-out;
-    }
+  &:after {
+    position: absolute;
+    content: '.';
+    color: inherit;
+    right: -25px;
+    top: -7px;
+    display: none;
+    transition: all 0.2 ease-in-out;
+  }
 
-    &:hover::after {
-        display: block;
-    }        
-    &:hover {
-        color: @shadow-color;
-    }
-    &:active { 
-        color: @active-color;
-    }
-
+  &:hover::after {
+    display: block;
+  }
+  &:hover {
+    color: @shadow-color;
+  }
+  &:active {
+    color: @active-color;
+  }
 }
 
 .menu__list-mobile {
-    visibility: hidden;
-    position: absolute;
-    background-color: @main-color;
-    top: 3rem;
-    left: 5%;
-    width: 100vw;
-    padding: 25px 15px;
-    transition: left .3s;
-    animation-duration: 3s;
-    animation-name: slidein;
-    list-style: none;
-    box-shadow: 0 0 10px 4px @shadow-color ;
+  visibility: hidden;
+  position: absolute;
+  background-color: @main-color;
+  top: 3rem;
+  left: 5%;
+  width: 100vw;
+  padding: 25px 15px;
+  transition: left 0.3s;
+  animation-duration: 3s;
+  animation-name: slidein;
+  list-style: none;
+  box-shadow: 0 0 10px 4px @shadow-color;
 }
 
 .menu__item-mobile {
-    padding:0 3rem;
-
+  padding: 0 3rem;
 }
 .menu__mobile-logo {
-
-   
-    .screen(768px, 2220px, {
+  .screen(768px, 2220px, {
             display: none;
         });
 }
 
-
 // ------------------WORKS SECTION---------------------
 
-input[type=radio] {
-	opacity: 0;
+input[type='radio'] {
+  opacity: 0;
 }
-.switch-lang { 
-    border-bottom: 2px;
-    margin: 1rem 0;
-    cursor: pointer;
-    font-size: 1.5rem;
-    font-weight: 200;  
-    
-    &:hover {
-        color: rgba(255, 0, 247, 0.84);
-       
-    }
-    &:checked {
-        color: rgba(255, 0, 247, 0.84);;
-    }
+.switch-lang {
+  border-bottom: 2px;
+  margin: 1rem 0;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 200;
+
+  &:hover {
+    color: rgba(255, 0, 247, 0.84);
+  }
+  &:checked {
+    color: rgba(255, 0, 247, 0.84);
+  }
 }
 
-label[for="english"] {
-        margin-left: 45%;
+label[for='english'] {
+  margin-left: 45%;
 
-        .screen(320px, 768px, {
+  .screen(320px, 768px, {
             margin-left: 0;
         });
 }
-    
-  
- #english:checked ~ .about-wrapper .english{
-   display: block;
+
+#english:checked ~ .about-wrapper .english {
+  display: block;
 }
 
-#english ~ .about-wrapper .english{
-   display: none;
+#english ~ .about-wrapper .english {
+  display: none;
 }
 #english:checked ~ .about-wrapper .russian {
-    display: none;
+  display: none;
 }
-#russian:checked ~  .about-wrapper .russian{
-   display: block;
+#russian:checked ~ .about-wrapper .russian {
+  display: block;
 }
 
-#russian ~ .about-wrapper .russian{
-   display: none;
+#russian ~ .about-wrapper .russian {
+  display: none;
 }
-#russian:checked  ~ .about-wrapper .english {
-    display: none;
+#russian:checked ~ .about-wrapper .english {
+  display: none;
 }
 .main {
-    padding: 2%;
+  padding: 2%;
 }
 .works-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    list-style: none;
-    margin-top: 8rem;
-    padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+  margin-top: 8rem;
+  padding-left: 0;
 
-    @supports ( display: grid ) {
-        display: grid;
-        grid-gap: 4rem;
-        grid-template-columns: repeat(auto-fill, minmax(310px, 5fr));
-        grid-auto-rows: minmax(40vh, 310px);
-	}
+  @supports (display: grid) {
+    display: grid;
+    grid-gap: 4rem;
+    grid-template-columns: repeat(auto-fill, minmax(310px, 5fr));
+    grid-auto-rows: minmax(40vh, 310px);
+  }
 }
 
-@supports not ( display: grid ) {
-	.works-list__item {		
-		flex: 1 0 auto;
-		flex-wrap: wrap;
-		height: 30vh;
-		margin: .5rem;
-		max-width: 20rem;
-		min-width: 15rem;
-	}
+@supports not (display: grid) {
+  .works-list__item {
+    flex: 1 0 auto;
+    flex-wrap: wrap;
+    height: 30vh;
+    margin: 0.5rem;
+    max-width: 20rem;
+    min-width: 15rem;
+  }
 }
 .works-list__item {
-    position: relative;
-    
-    &:hover {
-        -webkit-transform: translate3d(0,0,0);
-        transform: translate3d(0,0,0);
-    }
-}
+  position: relative;
 
+  &:hover {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
 
 .work-list__link {
-    text-decoration: none;
-
+  text-decoration: none;
 }
 .link-img {
-    width: 86px;
-    height: 86px;
-    position: absolute;
-    top: 15%;
-    opacity: 0; 
-    left: 40%;
-    background-color: @text-color;
-    border-radius: 5px;
-    cursor: pointer;
-
+  width: 86px;
+  height: 86px;
+  position: absolute;
+  top: 15%;
+  opacity: 0;
+  left: 40%;
+  background-color: @text-color;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .works-screen {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.4s;
-    border-radius: 7px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.4s;
+  border-radius: 7px;
 }
 
 .work-list__text-wrap {
-    position: absolute;
-    top: auto;
-    left: 0;
-    width: 100%;
-    bottom: 0;
-    padding: 1em;
-    background-color: @text-color;
-    color: @main-color;   
-    transition: transform 0.4s, opacity 0.1s 0.3s;
-    opacity: 0;
-    display: flex;
-    flex: 1 0 auto;
-    align-items: baseline;
-    border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px;
+  position: absolute;
+  top: auto;
+  left: 0;
+  width: 100%;
+  bottom: 0;
+  padding: 1em;
+  background-color: @text-color;
+  color: @main-color;
+  transition: transform 0.4s, opacity 0.1s 0.3s;
+  opacity: 0;
+  display: flex;
+  flex: 1 0 auto;
+  align-items: baseline;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
 }
 .works-list__item:hover .work-list__text-wrap,
-.works-list__item:hover .link-img{
-       transform: translateY(0px);
-       transition: transform 0.4s, opacity 0.1s;
-       opacity: 1;
+.works-list__item:hover .link-img {
+  transform: translateY(0px);
+  transition: transform 0.4s, opacity 0.1s;
+  opacity: 1;
 }
 .works-list__item:hover .work-list__text-wrap {
-    transform: translateY(0px);
-    transition: transform 0.6s, opacity 0.1s;
+  transform: translateY(0px);
+  transition: transform 0.6s, opacity 0.1s;
 }
 .works-list__item:hover .works-screen {
-    opacity: 0.4;
-    transform: translateY(-50px);
+  opacity: 0.4;
+  transform: translateY(-50px);
 }
-.work-list__title{
-    font-size: 1.4rem;
-    line-height: 1.5;
-    font-weight: 700;
-    text-align: center;
-    transition: transform 0.35s;
-    margin: 0;
-
+.work-list__title {
+  font-size: 1.4rem;
+  line-height: 1.5;
+  font-weight: 700;
+  text-align: center;
+  transition: transform 0.35s;
+  margin: 0;
 }
 .work-list__description {
-    margin-left: auto;
-    text-align: center;
+  margin-left: auto;
+  text-align: center;
 }
 @keyframes fillup {
-  to { stroke-dasharray: 158 158; }
+  to {
+    stroke-dasharray: 158 158;
+  }
 }
 .top-right {
   transform: rotate(270deg);
@@ -299,158 +280,194 @@ label[for="english"] {
 // -----------------SOCIAL-------------------------
 
 .social-icons {
-    display: flex;
-    justify-content: center;
-    margin: 2rem 15rem;
+  display: flex;
+  justify-content: center;
+  margin: 2rem 15rem;
 
-    .screen(320px, 768px, {
+  .screen(320px, 768px, {
         margin: 0.5rem;
     });
 }
 .social-title {
-    text-align: center;
-    margin-top: 5rem;
-    font-size: 2rem;
-    font-weight: 400;
+  text-align: center;
+  margin-top: 5rem;
+  font-size: 2rem;
+  font-weight: 400;
 }
 
 .social-link {
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    margin: 0 auto;
-    position: relative;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  margin: 0 auto;
+  position: relative;
 }
-.social__icon{
-    font-size: 1rem;
-    position: absolute;
-    display: inline-block;
-    width:70px;
-    height: 70px;
-    background-image: url(../img/sprite.png);
-    background-repeat: no-repeat;
+.social__icon {
+  font-size: 1rem;
+  position: absolute;
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  background-image: url(../img/sprite.png);
+  background-repeat: no-repeat;
 }
 
 .github {
-    background-position: -82px -214px;
-    &:hover {
-        background-position: 0px -214px;
-    }
+  background-position: -82px -214px;
+  &:hover {
+    background-position: 0px -214px;
+  }
 }
 .twitter {
-     background-position:-78px 7px;
-    &:hover {
-        background-position: 0px 7px;
-    }
+  background-position: -78px 7px;
+  &:hover {
+    background-position: 0px 7px;
+  }
 }
 .telegram {
-     background-position: -78px -57px;
-    &:hover {
-        background-position: 0px -57px;
-
-    }
+  background-position: -78px -57px;
+  &:hover {
+    background-position: 0px -57px;
+  }
 }
 .codepen {
-    background-position:-82px -136px;
-    &:hover {
-        background-position: 0px -136px;
-    }
-
+  background-position: -82px -136px;
+  &:hover {
+    background-position: 0px -136px;
+  }
 }
 
 .about-wrapper {
-    margin-top: 3rem;
-    position: relative;
+  margin-top: 3rem;
+  position: relative;
 
-    .screen(768px, 2220px {
+  .screen(768px, 2220px {
          padding: 0 5rem;
     });
 }
 
 .about-block {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .about-hello {
-    font-size: 3.2rem;
-    line-height: 2rem;
-    font-weight: 300;
-    text-shadow: 1px 1px rgba(255, 0, 247, 0.84);
+  font-size: 3.2rem;
+  line-height: 2rem;
+  font-weight: 300;
+  text-shadow: 1px 1px rgba(255, 0, 247, 0.84);
 }
 
 .about-text {
-    color: @text-color;
-    font-size: 1.2rem;
-    line-height: 1.8;
-    font-weight: 300;
+  color: @text-color;
+  font-size: 1.2rem;
+  line-height: 1.8;
+  font-weight: 300;
 }
 
 .about-header {
-    font-weight: 500;
+  font-weight: 500;
 }
 .about-link {
-    width: 1rem;
-    height: 1rem;
-    color: @text-color;
-    text-decoration: none;
-    
-    &:hover {
-        color: @shadow-color;
-    }
+  width: 1rem;
+  height: 1rem;
+  color: @text-color;
+  text-decoration: none;
 
-    .fa {
-        font-size: 1.2rem;
-    }
+  &:hover {
+    color: @shadow-color;
+  }
+
+  .fa {
+    font-size: 1.2rem;
+  }
 }
 
 // //////////////////////  CV  ////////////
 .site-wrapper-cv {
-     margin: 0 auto;
-    padding: 10% 3%;
-   background-color: rgb(255, 255, 255);
-    max-width: 70em;
-    color: darken(@text-color, 80%);
+  margin: 0 auto;
+  padding: 1% 5%;
+  background-color: rgb(255, 255, 255);
+  max-width: 70em;
+  color: darken(@text-color, 80%);
 
-    .screen(1024px, 2220px, {
-        padding: 1%;
+  .screen(1024px, 2220px, {
+        padding: 1% 15%;
+    });
+}
+.header-cv {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+.header-cv__title {
+  display: flex;
+  align-items: end;
+justify-content: space-around;
+}
+
+.header-cv__mail {
+}
+.header-name {
+    font-size: 29px;
+  margin: 0;
+  max-width: 70%;
+
+  .screen(320px, 670px, {
+        font-size: 25px;
     });
 
 }
-.header-cv {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-}
-.header-cv__title {
-   font-size: 29px;
-    margin: 0 auto;
-}
-
-.header-cv__contacts {
-    display: flex;
-    flex: 1 1 50%;
-    align-items: baseline;
-    justify-content: space-around;
-    font-size: 26px;
-}
-.header-cv__mail {
-
-}
 .header-photo {
-    width: 200px;
-    border-radius: 50%;
-    font-weight: 300;
-    margin-top: 2rem;
-}
-.header-cv__btn {
-    margin: 0 auto;
-}
-.header-cv__pdf-btn {
-    color: #ffffff;
-    font-size: 24px;
-    background-color: @main-color;
-    text-decoration: none;
-    padding: 10px 12px;
+  width: 157px;
+  height: 100%;
 
+  .screen(320px, 670px, {
+         width: 107px;
+    });
+}
+.header-cv__contacts {
+  display: flex;
+  flex: 1 1 50%;
+  align-items: baseline;
+  justify-content: space-around;
+  font-size: 26px;
+
+  @media screen and (max-width: 678px) {
+    flex-direction: column;
+  }
+}
+
+.cv__btn {
+  margin: 25px auto;
+  max-width: 200px;
+}
+
+.cv__pdf-btn {
+  color: #ffffff;
+  font-size: 24px;
+  background-color: @main-color;
+  text-decoration: none;
+  padding: 10px 12px;
+}
+
+.title-article {
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: @active-color;
+    top: 39px;
+    left: 0;
+  }
+}
+.technical-lists {
+  display: flex;
+  justify-content: center;
+}
+.technical__skills {
+  margin: 25px;
 }
