--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -1,5 +1,5 @@
 // mixin for media query
-.screen(@min, @max, @ruleset) {
+.screen (@min, @max, @ruleset) {
   @media (min-width: @min) and (max-width: (@max - 1)) {
     @ruleset();
   }
@@ -162,12 +162,12 @@ label[for='english'] {
   flex-wrap: wrap;
   justify-content: space-between;
   list-style: none;
-  margin-top: 8rem;
+  margin-top: 2rem;
   padding-left: 0;
 
   @supports (display: grid) {
     display: grid;
-    grid-gap: 4rem;
+    grid-gap: 8rem;
     grid-template-columns: repeat(auto-fill, minmax(310px, 5fr));
     grid-auto-rows: minmax(40vh, 310px);
   }
@@ -184,97 +184,32 @@ label[for='english'] {
   }
 }
 .works-list__item {
-  position: relative;
-
   &:hover {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+    outline: 3px solid @shadow-color;
   }
-}
-
-.work-list__link {
-  text-decoration: none;
-}
-.link-img {
-  width: 86px;
-  height: 86px;
-  position: absolute;
-  top: 15%;
-  opacity: 0;
-  left: 40%;
-  background-color: @text-color;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
 .works-screen {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  transition: transform 0.4s;
-  border-radius: 7px;
+  position: relative;
 }
 
 .work-list__text-wrap {
   position: absolute;
-  top: auto;
-  left: 0;
-  width: 100%;
-  bottom: 0;
-  padding: 1em;
-  background-color: @text-color;
-  color: @main-color;
-  transition: transform 0.4s, opacity 0.1s 0.3s;
-  opacity: 0;
-  display: flex;
-  flex: 1 0 auto;
-  align-items: baseline;
-  border-bottom-left-radius: 7px;
-  border-bottom-right-radius: 7px;
+  text-align: left;
+  color: @text-color;
 }
-.works-list__item:hover .work-list__text-wrap,
-.works-list__item:hover .link-img {
-  transform: translateY(0px);
-  transition: transform 0.4s, opacity 0.1s;
-  opacity: 1;
-}
-.works-list__item:hover .work-list__text-wrap {
-  transform: translateY(0px);
-  transition: transform 0.6s, opacity 0.1s;
-}
-.works-list__item:hover .works-screen {
-  opacity: 0.4;
-  transform: translateY(-50px);
-}
+
 .work-list__title {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   line-height: 1.5;
-  font-weight: 700;
-  text-align: center;
-  transition: transform 0.35s;
+  font-weight: 500;
   margin: 0;
 }
 .work-list__description {
-  margin-left: auto;
-  text-align: center;
-}
-@keyframes fillup {
-  to {
-    stroke-dasharray: 158 158;
-  }
-}
-.top-right {
-  transform: rotate(270deg);
-  background: #b0b881;
-  border-radius: 50%;
-  margin: 18% 40%;
-}
-.top-right-circle {
-  fill: #b0b881;
-  stroke: #305a63;
-  stroke-width: 115;
-  animation: fillup 5s linear infinite;
-  stroke-dasharray: 118 48;
+  font-size: 1rem;
 }
 
 // -----------------SOCIAL-------------------------
@@ -405,10 +340,6 @@ label[for='english'] {
   align-items: end;
   justify-content: space-around;
 }
-
-.header-cv__mail {
-}
-
 
 .header-name {
   font-size: 29px;
