--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -185,7 +185,7 @@ label[for='english'] {
 }
 .works-list__item {
   &:hover {
-    outline: 3px solid @shadow-color;
+     outline: 2px solid rgba(211, 84, 209, 0.84);
   }
 }
 
